<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="horizontal"
    >
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@android:color/holo_green_light"
        app:title="Add Product"
        app:titleTextColor="@android:color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/layout"
        android:padding="16dp"
        android:layout_below="@+id/toolbar">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Category"
                android:textStyle="bold"
                android:textSize="20sp"
                />

            <Spinner
                android:id="@+id/spncategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:overlapAnchor="true"
                android:spinnerMode="dropdown"
                android:layout_weight="1"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Brand"
                android:textStyle="bold"
                android:textSize="20sp"
                />
            <Spinner
                android:id="@+id/spnbrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:overlapAnchor="true"
                android:spinnerMode="dropdown"
                android:layout_weight="1"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/ivProductImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/product_image"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />

            <Button
                android:id="@+id/btnProductImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/btn_select_image" />
        </LinearLayout>

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_product_name"
            android:textSize="15dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etProductName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textAlignment="center"
            android:background="@drawable/edittext_layout"
            tools:ignore="RtlCompat"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_email_supplier"
            android:textSize="15dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etProductSupplier"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:background="@drawable/edittext_layout"
            tools:ignore="RtlCompat"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_price"
            android:id="@+id/tvprice"
            android:textSize="15dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etProductPrice"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:background="@drawable/edittext_layout"
            tools:ignore="RtlCompat"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Quantity"
            android:id="@+id/tvquan"
            android:textSize="15dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etProductQuantity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="center"
            android:background="@drawable/edittext_layout"
            tools:ignore="RtlCompat"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Quantity In Catton"
            android:id="@+id/coton"
            android:textSize="15dp"
            android:visibility="gone"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etcotonQuantity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:visibility="gone"
            android:inputType="number"
            android:textAlignment="center"
            android:background="@drawable/edittext_layout"
            tools:ignore="RtlCompat"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Price Per Catton"
            android:id="@+id/pricecoton"
            android:textSize="15dp"
            android:visibility="gone"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etcotonpriceQuantity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:visibility="gone"
            android:inputType="number"
            android:textAlignment="center"
            android:background="@drawable/edittext_layout"
            tools:ignore="RtlCompat"/>
    </LinearLayout>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chkbox"
        android:text="Quantity In Catton"
        android:layout_below="@+id/layout"
        android:textSize="15dp"
        android:textStyle="bold"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        >
        <Button
            android:id="@+id/btnadd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_layout"
            android:text="Add"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/btnclear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/button_layout"
            android:text="Admin"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/btnupdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_layout"
            android:text="Update  |Delete"
            android:textSize="10dp"
            android:textStyle="bold"
            android:onClick="btn_showDialog"/>

    </RelativeLayout>


</RelativeLayout>